--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,9 @@ rust_decimal_macros = "1.39.0"
 # HTTP client for initial snapshot
 reqwest = { version = "0.13.0-rc.1", features = ["json"] }
 
+# Async trait support for exchange connectors
+async-trait = "0.1"
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
@@ -32,8 +35,17 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Memory stats (optional, for metrics)
 sysinfo = "0.37.2"
+dashmap = "6.1.0"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "message_processing"
+harness = false
 
 [profile.release]
+debug = true          # Enable debug symbols for profiling
 lto = true
 codegen-units = 1
 opt-level = 3
