--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ description = "Real-time order book visualizer backend"
 [dependencies]
 # Async runtime
 tokio = { version = "1.48.0", features = ["full"] }
+tikv-jemallocator = "0.6.1"
 
 # WebSocket client and server
 tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
@@ -40,9 +41,6 @@ dashmap = "6.1.0"
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 
-[[bench]]
-name = "message_processing"
-harness = false
 
 [profile.release]
 debug = true          # Enable debug symbols for profiling
